--- a/css/fonts.css
+++ b/css/fonts.css
@@ -46,3 +46,25 @@
   font-weight: 500;
   src: url("../assets/fonts/inter/Inter_24pt-Medium.ttf");
 }
+
+@font-face {
+  font-family: "Akira Expanded";
+  font-style: normal;
+  font-weight: 800;
+  src: url("../assets/fonts/akira-expanded/Akira-Expanded-Demo.otf");
+}
+
+@font-face {
+  font-family: "Druk Wide Cyr";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../assets/fonts/druk-wide-cyr/Druk-Wide-Cyr.woff2") format("woff2"),
+    url("../assets/fonts/druk-wide-cyr/Druk-Wide-Cyr.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "TT Travels";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../assets/fonts/tt-travels/TT-Travels-Next-Trial-DemiBold.ttf");
+}
