--- a/css/hero.css
+++ b/css/hero.css
@@ -10,7 +10,7 @@
   );
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: top center;
   height: 100svh;
   position: absolute;
   top: 0;
