--- a/css/button.css
+++ b/css/button.css
@@ -1,28 +1,33 @@
 .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease;
 }
 
 .button:disabled {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .button:active {
-    scale: 0.95;
+  scale: 0.95;
 }
 
 .button.primary {
-    background-color: var(--base-200);
-    padding: 24px;
-    border-radius: 20px;
-    font-family: var(--font-family-first);
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--base-content-100);
+  background-color: var(--base-200);
+  padding: 24px;
+  border-radius: 20px;
+  font-family: var(--font-family-first);
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--base-content-100);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(40px);
+  -webkit-backdrop-filter: blur(40px);
+  outline: 1px solid rgba(255, 255, 255, 0.2);
+  text-transform: uppercase;
 }
 
 .button.primary:hover {
-    box-shadow: 0 0 10px var(--base-200);
+  box-shadow: 0 0 10px var(--base-200);
 }
