--- a/css/hero.css
+++ b/css/hero.css
@@ -51,8 +51,9 @@
   line-height: 140%;
   text-transform: uppercase;
   color: var(--base-content-100);
-  max-width: 805px;
+  max-width: 880px;
   width: 100%;
+  letter-spacing: 0.02em;
 }
 
 .hero__description {
@@ -65,6 +66,14 @@
   color: var(--base-content-200);
   margin: 0 auto;
   margin-top: 40px;
+}
+
+.hero__button.button {
+  height: 58px;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: none;
+  padding: 24px;
 }
 
 @media (max-width: 1024px) {
