--- a/css/card.css
+++ b/css/card.css
@@ -8,6 +8,7 @@
   justify-content: space-between;
   height: 640px;
   overflow: hidden;
+  max-height: 75dvh;
 }
 
 .card::before {
@@ -17,10 +18,10 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 20%;
+  height: 40%;
   background: linear-gradient(
     360deg,
-    rgba(5, 5, 5, 0.8) 0%,
+    rgba(5, 5, 5, 0.3) 0%,
     rgba(5, 5, 5, 0.8) 100%
   );
   filter: blur(20px);
@@ -32,7 +33,7 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  z-index: 2;
+  z-index: 10;
 }
 
 .card__advantages {
@@ -50,20 +51,20 @@
   justify-content: center;
   align-items: center;
   height: 50px;
-  border-radius: 20px;
   background: rgba(255, 255, 255, 0.1);
-  border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(40px);
   -webkit-backdrop-filter: blur(40px);
   outline: 1px solid rgba(255, 255, 255, 0.2);
   text-transform: uppercase;
   line-height: 1;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .card__content {
-  margin-top: 90px;
-  z-index: 5;
+  margin-top: 40px;
+  z-index: 10;
   position: relative;
 }
 
@@ -77,7 +78,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  margin-bottom: 80px;
+  margin-bottom: 65px;
   width: 100%;
 }
 
@@ -99,23 +100,33 @@
 
 .card.orange-card::before {
   background: linear-gradient(180deg, #131313 0%, #000 100%);
-  filter: blur(0);
+  filter: blur(40px);
 }
 
-.card.orange-card::after {
+.card::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
+  filter: blur(12px);
+  background: linear-gradient(
+    0deg,
+    rgba(5, 5, 5, 0.6) 0%,
+    rgba(5, 5, 5, 0.6) 100%
+  );
+  z-index: 5;
+  height: 30%;
+}
+
+.card.orange-card::after {
   background: linear-gradient(
     360deg,
-    rgba(255, 123, 34, 0.12) 0%,
-    rgba(255, 123, 34, 0.08) 100%
+    rgba(255, 123, 34, 0.15) 0%,
+    rgba(255, 123, 34, 0.06) 100%
   );
-  height: 20%;
-  filter: blur(30px);
-  z-index: 5;
+  height: 30%;
+  filter: blur(20px);
 }
 
 .orange-card .card__title {
@@ -133,6 +144,12 @@
   bottom: 0;
   object-fit: cover;
   object-position: center;
+  width: 100%;
+  height: 100%;
+}
+
+.card:nth-child(2) .card__bg {
+  opacity: 0.4;
 }
 
 .card__image {
@@ -162,7 +179,9 @@
 }
 
 .card__footer-button.button {
-  height: 60px;
+  height: 58px;
+  text-transform: none;
+  padding: 24px 28px;
 }
 
 .card.orange-card .card__footer-button.button {
@@ -174,10 +193,10 @@
 .card__parameters {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 30px;
+  gap: 20px;
   max-width: 825px;
   width: 100%;
-  column-gap: 60px;
+  column-gap: 0px;
 }
 
 .card__parameter {
@@ -186,10 +205,12 @@
   font-weight: 400;
   line-height: 140%;
   color: rgba(255, 255, 255, 0.8);
+  margin-left: 12px;
 }
 
 .card__parameter::marker {
   color: var(--green-100);
+  font-size: 20px;
 }
 
 .card {
@@ -211,6 +232,7 @@
   font-size: 28px;
   font-weight: 500;
   line-height: 120%;
+  letter-spacing: 0.02em;
   background: linear-gradient(90deg, #fff 0%, #5b6468 100%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -268,10 +290,10 @@
     top: 80px; /* базовое прилипающее смещение */
   }
   .card:nth-child(2) {
-    top: 120px;
+    top: 118px;
   }
   .card:nth-child(3) {
-    top: 160px;
+    top: 156px;
   }
   .card:nth-child(4) {
     top: 200px;
