--- a/css/footer.css
+++ b/css/footer.css
@@ -30,10 +30,11 @@
   -webkit-text-fill-color: transparent;
   max-width: 572px;
   width: 100%;
+  letter-spacing: 0.02em;
 }
 
 .footer__description {
-  margin-top: 40px;
+  margin-top: 30px;
   font-size: 16px;
   font-weight: 400;
   line-height: 140%;
@@ -43,7 +44,7 @@
 }
 
 .footer__tg {
-  margin-top: 90px;
+  margin-top: 80px;
   display: flex;
   align-items: center;
   gap: 20px;
@@ -53,10 +54,13 @@
   padding-left: 24px;
   width: max-content;
   font-family: var(--font-family-fifth);
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 600;
+  line-height: 140%;
+  letter-spacing: -0.04em;
   text-transform: uppercase;
   color: var(--base-content-100);
+  height: 60px;
 }
 
 .footer__big-text {
