--- a/css/card.css
+++ b/css/card.css
@@ -82,6 +82,22 @@
   width: 100%;
 }
 
+.card:first-child {
+  z-index: 10;
+}
+
+.card:nth-child(2) {
+  z-index: 11;
+}
+
+.card:nth-child(3) {
+  z-index: 12;
+}
+
+.card:nth-child(4) {
+  z-index: 13;
+}
+
 .card:first-child .card__title {
   max-width: 402px;
 }
@@ -213,20 +229,6 @@
   font-size: 20px;
 }
 
-.card {
-  position: sticky;
-  top: 80px; /* базовое прилипающее смещение */
-}
-.card:nth-child(2) {
-  top: 200px;
-}
-.card:nth-child(3) {
-  top: 320px;
-}
-.card:nth-child(4) {
-  top: 440px;
-}
-
 .card__footer-description {
   font-family: var(--font-family-third);
   font-size: 28px;
@@ -281,21 +283,5 @@
 
   .card__footer-description {
     font-size: 24px;
-  }
-}
-
-@media (min-width: 900px) and (max-height: 1000px) {
-  .card {
-    position: sticky;
-    top: 80px; /* базовое прилипающее смещение */
-  }
-  .card:nth-child(2) {
-    top: 118px;
-  }
-  .card:nth-child(3) {
-    top: 156px;
-  }
-  .card:nth-child(4) {
-    top: 200px;
   }
 }
