--- a/css/services.css
+++ b/css/services.css
@@ -1,7 +1,7 @@
 .services {
   margin-top: 76px;
   background-color: var(--base-100);
-
+  margin-top: -100svh;
   position: relative;
 }
 
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding-bottom: 640px;
 }
 
 .services__navbar {
@@ -82,5 +83,9 @@
 @media (min-width: 1024px) and (max-height: 768px) {
   .services__nav.button {
     padding: 16px;
+  }
+
+  .services__list {
+    padding-bottom: 290px;
   }
 }
