--- a/css/hero.css
+++ b/css/hero.css
@@ -83,6 +83,10 @@
 }
 
 @media (max-width: 768px) {
+  .hero__inner {
+    padding-top: 10px;
+  }
+
   .hero__content {
     flex-direction: column;
     justify-content: end;
