--- a/css/card.css
+++ b/css/card.css
@@ -60,6 +60,8 @@
   line-height: 1;
   font-size: 14px;
   font-weight: 500;
+  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .card__content {
@@ -229,6 +231,10 @@
   font-size: 20px;
 }
 
+.orange-card .card__parameter::marker {
+  color: var(--orange-100);
+}
+
 .card__footer-description {
   font-family: var(--font-family-third);
   font-size: 28px;
@@ -259,6 +265,22 @@
   line-height: 140%;
   color: var(--base-content-100);
   opacity: 0.6;
+}
+
+.card__video-wrapper {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0.4;
+}
+
+.card__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top center;
 }
 
 @media (max-width: 1024px) {
@@ -333,6 +355,11 @@
     margin-bottom: 34px;
   }
 
+  .card__parameters {
+    gap: 10px;
+    grid-template-columns: 1fr;
+  }
+
   .card__parameter {
     font-size: 12px;
   }
@@ -351,7 +378,7 @@
     font-weight: 500;
     text-align: left;
     width: 100%;
-    margin-top: 34px;
+    margin-top: 20px;
   }
 
   .card__footer-button.button {
@@ -373,12 +400,21 @@
   }
 
   .card__title {
-    margin-bottom: 34;
+    margin-bottom: 26px;
   }
 
   .card__header-description {
     margin-left: 10px;
     font-size: 12px;
   }
+
+  .card-2 .card__parameter:nth-last-child(-n+3) {
+    display: none;
+  }
+
+  .card-3 .card__parameter:last-child {
+    display: none;
+  }
+
 
 }
