--- a/css/hero.css
+++ b/css/hero.css
@@ -17,7 +17,35 @@
   left: 0;
   right: 0;
   bottom: 0;
-  height: 100svh;
+}
+
+.hero__video-wrapper {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+}
+
+.hero__video-wrapper::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.hero__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top center;
 }
 
 .hero__inner {
@@ -107,5 +135,9 @@
     margin: 0 auto;
     margin-top: 42px;
     width: 100%;
+  }
+
+  .hero__video {
+    object-position: center center;
   }
 }
