--- a/css/hero.css
+++ b/css/hero.css
@@ -102,6 +102,8 @@
   font-weight: 500;
   text-transform: none;
   padding: 24px;
+  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 @media (max-width: 1024px) {
@@ -141,3 +143,4 @@
     object-position: center center;
   }
 }
+
