--- a/css/footer.css
+++ b/css/footer.css
@@ -65,7 +65,7 @@
 
 .footer__big-text {
   font-family: var(--font-family-fourth);
-  font-size: 19vw;
+  font-size: 18vw;
   font-weight: 800;
   line-height: 120%;
   text-transform: uppercase;
@@ -73,13 +73,16 @@
   color: var(--base-content-100);
   margin-top: 108px;
   width: 100%;
+  position: relative;
 }
 
 .footer__big-text sup {
-  font-size: 5vw;
-  vertical-align: top;
-  line-height: 2.5;
-  margin-left: -60px;
+  font-size: 4vw;
+  position: absolute;
+  top: 0;
+  right: 0;
+  line-height: 1;
+  top: 17%;
 }
 
 .footer__big-text--small {
@@ -108,8 +111,6 @@
 
   .footer__big-text sup {
     margin: 0;
-    margin-left: -15px;
-    line-height: 2.5;
   }
 
   .footer__tg {
@@ -133,12 +134,5 @@
 
   .footer__big-text {
     font-size: 18.5vw;
-  }
-}
-
-@media(min-width: 768px) and (max-width: 1024px) {
-  .footer__big-text sup {
-    line-height: 2.5;
-    margin-left: -36px;
   }
 }
