--- a/css/hero.css
+++ b/css/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  height: 200svh;
+  height: 200dvh;
   position: relative;
 }
 
@@ -11,7 +11,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
-  height: 100svh;
+  height: 100dvh;
   position: absolute;
   top: 0;
   left: 0;
@@ -52,7 +52,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  height: 100svh;
+  height: 100dvh;
 }
 
 .hero__content {
